# CompressionJPEG

./: CMakeLists.txt  Config.cpp  DCT.cpp  DCT.h  Image.cpp  Image.h  JPEGEncoder.cpp  JPEGEncoder.h  Matrix.cpp  Matrix.h  Quantification.cpp  Quantification.h  Quantization.h  README.md  RLE.cpp  RLE.h  config.ini  irle.cpp  irle.h  main.cpp
doc/bmp/: FIME (F) - Raccourci.lnk
img/: damier.txt  lena.txt
include/: Config.h  DCT.h  DPCM.h  EncodingStrategy.h  Huffman.h  Image.h  JPEGEncoder.h  Matrix.h  RLE.h
src/: Config.cpp  DCT.cpp  DPCM.cpp  EncodingStrategy.cpp  Huffman.cpp  Image.cpp  JPEGEncoder.cpp  Matrix.cpp  RLE.cpp
